    * Show favorite boards in context menu and sidebar
    * Scroll to appropriate location when filtering/unfiltering
    * Workaround Firefox 3 bug that breaks QuickPost and other features when
      third-party cookies are blocked
    * Restore QuickPost reset button with additional functionality
    * Add HTML buttons to posting
    * Add link to message headers to quote

2008-11-01:
    * version 0.6.7
    * Option to remove preview buttons for QuickPost
    * QuickPost reset button removed
    * Label posts from the topic creator
    * When GameFAQs stylesheets are disabled, they no longer briefly appear
      when the page is loaded
    * Better ad blocking, similar to Adblock Plus
    * Remove CSS: QuickPost (0.5)
    * Add account switcher to the sidebar
    * Jump to the last post or page after QuickPosting
    * Label topics on the active messages list that have messages after your
      last post
    * Improved Ricapar Classic CSS
    * Add page jumper to the bottom of the active messages list
    * Options to control where you're redirected to after QuickPosting
    * Descriptions for stylesheets in the options window
    * Fix automatic pagination on the Active Messages list
    * Link to delete your posts from the message list
    * Remove custom quote templates
    * New CSS: Status icons (normal)
    * New CSS: Status icons (classic)
    * Access keys for QuickPost
    * Link to filter posts by user

2008-09-21:
    * version 0.6.6
    * Fix "new row" pagination
    * Alternate colors when removing topics/messages
    * Improve speed of character counters
    * Toolbar buttons
    * Move clutter to a GameFOX submenu in the context menu
    * Right click option to add or remove someone from a user highlighting
      group
    * Remove pre-signature field
    * Enforce the 160-character limit in signatures
    * Link to the last post of a topic in its "last post" column
    * Remove "GFCode for message body" quoting style