@@ -8,6 +8,7 @@
     * Restore QuickPost reset button with additional functionality
     * Add HTML buttons to posting
     * Add link to message headers to quote
+    * Add options to remove sections from the GameFOX sidebar
 
 2008-11-01:
     * version 0.6.7
